--- a/HigiMiddleware/HigiMiddleware.csproj
+++ b/HigiMiddleware/HigiMiddleware.csproj
@@ -134,7 +134,9 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <Content Include="Properties\webjobs-list.json" />
+    <None Include="Properties\PublishProfiles\HigiMiddlewareDemo - FTP %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\HigiMiddlewareDemo - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\HigiMiddlewareDemo - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\HigiMiddlewareDemo - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\HigiMiddlewareDemo.pubxml" />
     <None Include="Web.Debug.config">
