--- a/HigiMiddlewareModels/HigiMiddlewareModels.csproj
+++ b/HigiMiddlewareModels/HigiMiddlewareModels.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="JobNotification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UserQuery.cs" />
